--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,16 @@ services:
       - .:/webapp
     working_dir: /webapp
     command: npm run dev
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+  adminer:
+    image: adminer
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      ADMINER_DESIGN: hydra
